# devops_triaging

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  web_ui.py
collector/: __init__.py  trajectory_collector.py
connectors/: __init__.py  datadog_connector.py  elk.py  mock.py  pagerduty.py  protocols.py  ticket_systems.py
data/: service_topology.py
generator/: __init__.py  failure_types.py  scenario_generator.py
scenarios/: __init__.py  alert_triage.py  base.py  cascading_failure.py  root_cause_analysis.py  ticket_triage.py
server/: app.py  environment.py
training/: __init__.py  agent_loop.py  grpo_trainer.py  runbook_converter.py
